# Xun

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  arena.rs  index.rs  ipc.rs  main.rs  model.rs  server.rs  win.rs  xlog.rs
ui/: app.slint
